# clap-web-gen

./: .gitignore  Cargo.toml  README.md  build-example-release.sh
code_gen/: Cargo.toml  output.html  ui.html
code_gen/src/: cli-ui.css  cli-ui.js  i18n.js  lib.rs
code_gen_macro/: Cargo.toml
code_gen_macro/src/: lib.rs
example/: Cargo.toml  generated_ui.html  test.html
example/examples/: show_json.rs
example/src/: lib.rs  main.rs
macro/: Cargo.toml
macro/src/: lib.rs
