[package]
name = "clap_web_code_gen"
version = "0.1.0"
edition = "2024"
description = "Automatically generate web UIs for Rust CLI applications using Clap - maps CLI args to HTML form elements and compiles to WASM"
license = "GPL-3.0-only"
repository = "https://github.com/wb14123/clap-web-gen"

[dependencies]
paste = "1.0"
clap_web_macro = { path = "../macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
maud = "0.26"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
