[package]
name = "example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
code_gen = { path = "../code_gen" }
console_error_panic_hook = "0.1"
