[package]
name = "clap_web_macro"
version = "0.1.1"
edition = "2021"
description = "Procedural macros for clap_web_code_gen - provides the #[web_ui_bind] macro for generating web UI bindings"
license = "GPL-3.0-only"
repository = "https://github.com/wb14123/clap-web-gen"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
